// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectTile > renders an image when coverUrl is present 1`] = `
<div>
  <div
    class="relative rounded-lg overflow-hidden border border-gray-800 bg-gray-950 hover:border-blue-500 transition-colors group cursor-pointer pb-1"
  >
    <button
      aria-label="Open project Test"
      class="w-full block text-left"
    >
      <div
        class="aspect-video overflow-hidden bg-gray-900 relative"
      >
        <img
          alt="Test"
          class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-200"
          src="https://picsum.photos/200/100"
        />
      </div>
    </button>
    <div
      class="p-3 space-y-1 relative z-10"
    >
      <div
        class="text-sm font-semibold text-gray-200 truncate"
      >
        Test
      </div>
      <div
        class="flex justify-between items-center text-xs text-gray-500"
      >
        <span>
          120 photos
        </span>
      </div>
      <div
        class="flex justify-between items-center text-xs text-gray-600 truncate"
      >
        <span>
          /tmp/test
        </span>
      </div>
    </div>
    <div
      class="absolute bottom-0 left-0 w-full h-1 bg-gray-900 flex"
    >
      <div
        class="bg-blue-500 h-full transition-all"
        style="width: 0%;"
      />
      <div
        class="bg-gray-600 h-full transition-all"
        style="width: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`ProjectTile > renders with a fallback gradient when no coverUrl 1`] = `
<div>
  <div
    class="relative rounded-lg overflow-hidden border border-gray-800 bg-gray-950 hover:border-blue-500 transition-colors group cursor-pointer pb-1"
  >
    <button
      aria-label="Open project Test"
      class="w-full block text-left"
    >
      <div
        class="aspect-video overflow-hidden bg-gray-900 relative"
      >
        <div
          class="w-full h-full bg-gradient-to-br from-gray-800 to-gray-900 flex items-center justify-center text-sm text-gray-400"
        >
          <div
            class="text-center"
          >
            <div
              class="text-xs font-medium text-gray-500"
            >
              No cover
            </div>
          </div>
        </div>
      </div>
    </button>
    <div
      class="p-3 space-y-1 relative z-10"
    >
      <div
        class="text-sm font-semibold text-gray-200 truncate"
      >
        Test
      </div>
      <div
        class="flex justify-between items-center text-xs text-gray-500"
      >
        <span>
          0 photos
        </span>
      </div>
      <div
        class="flex justify-between items-center text-xs text-gray-600 truncate"
      >
        <span>
          /tmp/test
        </span>
      </div>
    </div>
    <div
      class="absolute bottom-0 left-0 w-full h-1 bg-gray-900 flex"
    >
      <div
        class="bg-blue-500 h-full transition-all"
        style="width: 0%;"
      />
      <div
        class="bg-gray-600 h-full transition-all"
        style="width: 0%;"
      />
    </div>
  </div>
</div>
`;
